--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
     "path": "^0.12.7",
     "react": "^18.3.1",
